--- a/Leon-the-dark-side-of-unikernels.tex
+++ b/Leon-the-dark-side-of-unikernels.tex
@@ -1,5 +1,7 @@
 \documentclass[conference]{IEEEtran}
 
+\pdfoutput=1
+
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{algorithmic}
@@ -36,7 +38,7 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 	space. The findings of this paper advocate for a tool to enable
 	management of dependent libraries in a unikernel to enable a
 	more ergonomic build process as well as take advantage of the
-	inherent security and perfomance benefits of unikernels.
+	inherent security and performance benefits of unikernels.
 \end{abstract}
 
 \begin{IEEEkeywords}
